# lockstats

./: .gitattributes  .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc.js  Cargo.toml  README.md  package.json  pnpm-lock.yaml
app/: .eslintrc.js  .prettierrc.js  package.json  tailwind.config.ts  tsconfig.json  vite.config.mts
app/src/: main.tsx
app/src/views/: App.tsx
desktop/: Cargo.toml  tauri.conf.json
desktop/src/: main.rs
parser/: Cargo.toml
parser/fixtures/replays/: 4695754_458165409.dem  4695754_458165409.json
parser/src/: main.rs
