[package]
name    = "lockstats"
publish = false
version = "0.1.0"

edition      = { workspace = true }
rust-version = { workspace = true }

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
color-eyre = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

tauri = { version = "1", features = ["shell-open"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
